--- a/index.html
+++ b/index.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="ZqDrOxQ_8X9b0aKgCXx98joXXWKRK04iuASkWwkQkn4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taste Bite - Fast Food</title>
+    <title>Tasty Bite - Fast Food</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Taste Bite</h1>
+        <h1>Welcome to Tasty Bite</h1>
         <p>Delicious Shawarma & Burgers</p>
-        <p>More are coming soon</p>
+        <p>Fast Food Delivery Service</p>
+        <p>Order Now and Enjoy!</p>
+
     </header>
 
     <section class="menu">
-        <h2>Our Menu</h2>
+    <h2>Our Menu</h2>
+    <div class="menu-items">
         <div class="item">
-            <img src="https://hips.hearstapps.com/hmg-prod/images/singleimagebug-chicken-shawarma-pin-1657722687.jpg?crop=1.00xw:0.667xh;0,0.230xh&resize=980:*" alt="Shawarma" width="200" height="200">
+            <img src="images/shawarma1.jpg" alt="Shawarma">
             <h3>Shawarma</h3>
-            <p>Price: 150 only</p>
-            <button style="background: linear-gradient(45deg, #00a2ff, #ffcc00, #ff3300); color: white; font-weight: bold; padding: 12px; border-radius: 8px;"><a href="tel:03041507399" class="order-button">Order Now</a>
-            </button>
-
+            <p>Price: <strong>150 only</strong></p>
+            <button class="order-button"><a href="tel:03041507399">Order Now</a></button>
         </div>
 
-        
         <div class="item">
-            <img src="https://cbx-prod.b-cdn.net/COLOURBOX28120225.jpg?width=800&height=800&quality=70" alt="Burger" width="200" height="200">
+            <img src="images/Burger1.jpg" alt="Burger">
             <h3>Burger</h3>
-            <p>Price: 150 Only</p>
-            <button style="background: linear-gradient(45deg, #00a2ff, #ffcc00, #ff3300); color: white; font-weight: bold; padding: 12px; border-radius: 8px;"> <a href="tel:03041507399">Order Now</a></button>
-
+            <p>Price: <strong>150 only</strong></p>
+            <button class="order-button"><a href="tel:03041507399">Order Now</a></button>
         </div>
-    </section>
+    </div>
+</section>
+
+    <section class="delivery">
+    <img src="images/delivery.png" alt="Fast Delivery" width="100" height="100">
+    <p><strong>Free and Fast Delivery Available!</strong></p>
+</section>
+
 
     <section class="contact">
         <h2>Order Now</h2>
-        <p>📞 Contact us at: <strong>03041507399</strong></p>
-        <p>Owner:<strong>Amjid Khan</strong></p>
+                <p>💬 <a href="https://wa.me/923041507399" target="_blank">Order on WhatsApp</a></p>
 
-        <p>💬 <a href="https://wa.me/923041507399" target="_blank">Order on WhatsApp</a></p>
+        <p>📞 Contact us at: <strong>03041507399</strong></p>
+    <details>   
+        <summary>Business Owner</summary>
+        <p>Amjid Khan</p>
+        <img src="images/amjid.jpeg" alt="Owner" width="100" height="100">
+        <p>📍 Location: Chapri, Pakistan</p>
+        <ul>
+            <li>Email:tastybiteinchapri@gmail.com
+    </details>
     </section>
 
     <footer>
-        <p>&copy; 2025 Taste Bite. All rights reserved.</p>
+        <p>&copy; 2025 Tasty Bite. All rights reserved.</p>
+       
     </footer>
 
     <script src="script.js"></script>
