--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -35,9 +36,14 @@
 </section>
 
     <section class="delivery">
-    <img src="images/delivery.png" alt="Fast Delivery" width="100" height="100">
-    <p><strong>Free and Fast Delivery Available!</strong></p>
+    <div class="delivery-text">
+        <p><strong>Free and Fast Delivery Available!</strong></p>
+    </div>
+    <div class="delivery-image">
+        <img src="images/delivery.png" alt="Fast Delivery">
+    </div>
 </section>
+
 
 
     <section class="contact">
